# videopromptbuilding

./: .gitignore  Developing ScriptForge AI Platform.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  character_agent.py  frame_agent.py  scene_agent.py  story_agent.py  utils.py
backend/app/routers/: __init__.py  characters.py  frames.py  project.py  scenes.py  story.py
backend/app/schemas/: __init__.py  character.py  frame.py  project.py  scene.py  story.py
backend/app/services/: __init__.py  project_service.py
backend/tests/: test_project_store.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/character/: CharacterSection.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/scene/: SceneSection.tsx
frontend/src/components/story/: StoryCard.tsx  StoryForm.tsx
frontend/src/components/ui/: CopyButton.tsx  StepBadge.tsx  StreamingBox.tsx
frontend/src/pages/: HomePage.tsx  ProjectPage.tsx
frontend/src/stores/: projectStore.ts
frontend/src/types/: index.ts
